Mejoras en el docker compose y en el docker file